--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,39 +2,25 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "wasm_ffi: example",
-      "type": "dart",
-      "request": "launch",
-      "program": "web",
-      "cwd": "wasm_ffi/example",
-    },
-    {
-      "name": "wasm_ffi: flutter example",
-      "type": "dart",
-      "request": "launch",
-      "program": "lib/main.dart",
-      "cwd": "wasm_ffi/example_flutter",
-    },
-    {
       "name": "universal_ffi: web example",
       "type": "dart",
       "request": "launch",
       "program": "web",
-      "cwd": "universal_ffi/example",
+      "cwd": "example",
     },
     {
       "name": "universal_ffi: ffi example",
       "type": "dart",
       "request": "launch",
       "program": "bin/example.dart",
-      "cwd": "universal_ffi/example",
+      "cwd": "example",
     },
     {
       "name": "universal_ffi: ffi-plugin example",
       "type": "dart",
       "request": "launch",
       "program": "lib/main.dart",
-      "cwd": "universal_ffi/example_ffi_plugin/example",
+      "cwd": "example_ffi_plugin/example",
     },
   ]
 }
