--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   ffi: ^2.1.3
   path: ^1.9.0
-  wasm_ffi: ^2.0.7
+  wasm_ffi:
+    repository: https://github.com/dh0er/wasm_ffi.git
 
 dev_dependencies:
   lints: ^4.0.0
