--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: universal_ffi
 description: A drop-in replacement for dart:ffi for all platforms including web (using wasm_ffi).
 version: 1.1.3
 repository: https://github.com/vm75/universal_ffi
+publish_to: none
 
 environment:
   sdk: ^3.5.1
@@ -10,7 +11,8 @@ dependencies:
   ffi: ^2.1.3
   path: ^1.9.0
   wasm_ffi:
-    repository: https://github.com/dh0er/wasm_ffi.git
+    git:
+      url: https://github.com/dh0er/wasm_ffi.git
 
 dev_dependencies:
   lints: ^4.0.0
